@@ -1,8 +1,8 @@
 Package: VSURF
 Type: Package
 Title: Variable Selection Using Random Forests
-Version: 0.7
-Date: 2013-07-26
+Version: 0.7.5
+Date: 2013-10-4
 Author: Robin Genuer, Jean-Michel Poggi and Christine Tuleau-Malot
 Maintainer: Robin Genuer <Robin.Genuer@isped.u-bordeaux2.fr>
 Description: Three steps variable selection procedure based on random forests. Initially developed to 
@@ -15,7 +15,7 @@ Description: Three steps variable selection procedure based on random forests. I
 	second step, for prediction purpose.
 License: GPL (>= 2)
 Depends: randomForest, rpart
-Packaged: 2013-09-10 09:11:44 UTC; robin
+Packaged: 2013-10-04 15:34:05 UTC; robin
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-09-10 12:27:05
+Date/Publication: 2013-10-07 18:21:05
