@@ -1,6 +1,6 @@
-85b98d72be759c3aca7d8a723c3e7026 *DESCRIPTION
+3707ebc3f85b63aa93b04ff50fe9f024 *DESCRIPTION
 a8c1eef6c6fb79bfd96b72ac1e74b587 *NAMESPACE
-c6ba4375711e8d7ae2be2a7007f3e8bb *NEWS
+b6bb0a025df5ca6945c3d6ede921ccca *NEWS
 7de320006a76456e367658beade0ca08 *R/VSURF.R
 ef5446025352dd67c484bf8738d0e782 *R/VSURF.default.R
 309dace2759d0794593e2f3794b74480 *R/VSURF.formula.R
@@ -13,10 +13,10 @@ ef5446025352dd67c484bf8738d0e782 *R/VSURF.default.R
 6488dcc7674971921d3f9c2040f4ff2b *R/VSURF.thres.R
 bca22af7ee46f98d77b62fb3d5066d15 *R/VSURF.thres.default.R
 57a70ffe7730c166e71b67b508c7bece *R/VSURF.thres.formula.R
-140a8fdc02abb514f750f4d7bfda25ce *R/plot.VSURF.R
-8f4b321569f347e70cff435d34433736 *R/plot.VSURF.interp.R
-e3b551907da80047f88fa4f9b5b01181 *R/plot.VSURF.pred.R
-8f14898e93beb724e64f9859ab3b4dd6 *R/plot.VSURF.thres.R
+c1f98681e3329e5169e88591d50045f3 *R/plot.VSURF.R
+5499924695c7dab04a23b65a8f551187 *R/plot.VSURF.interp.R
+c4c5ecec502c2915a10d1564a33fbf1c *R/plot.VSURF.pred.R
+ffeb8f66350fc7ff96b56ed4f273364b *R/plot.VSURF.thres.R
 82f6a636fe22cd59fded32906d1f832b *R/summary.VSURF.R
 0ce11b3a3964be75b1e25d7a259761de *R/tune.R
 6eb5f22b9845d022e43d354afb60706e *R/tune.VSURF.interp.R
@@ -26,7 +26,7 @@ e3b551907da80047f88fa4f9b5b01181 *R/plot.VSURF.pred.R
 4b1058d6084b06845142178e63a9bfe1 *man/VSURF.interp.Rd
 549a2f4b454e3a7f1f78b26d4ff0840f *man/VSURF.pred.Rd
 53c29e2dd1bf9602eb87f6c6dd45d4ae *man/VSURF.thres.Rd
-7e16a3e7269f49f50b30bbd7e51bb179 *man/plot.VSURF.Rd
+3097b00b942c79b820f9c4ce88336fd7 *man/plot.VSURF.Rd
 32b0ab11651681490947cd0297c575f9 *man/summary.VSURF.Rd
 304310d5f4a342c1a87ba86ca2132a0f *man/toys.Rd
 f2368f678a3ae846a2d0b928e2b8a2a3 *man/tune.Rd
